# Calculator

./: .gitignore  BUILD.txt  HCI.md  NEA_Presentation.pptx  NEW_FEATURES_SUMMARY.md  PI_SYMBOL_SOLUTIONS.md  TESTING_CHECKLIST.md  build-esp32.sh  build-macos.sh  build-windows.bat  button_keycodes.txt  calculator.kicad_pcb  calculator.kicad_pro  calculator.kicad_sch  create_presentation.py  create_presentation_with_images.py  design.md  design_s.md  evaluation.md  iteration.md  modelling.md  objectives.md  presentation.md  research.md  run.bat  screens.md  start.bat  sysinfo.md  techniques v2.md  techniques.md  techsolution v2.md  techsolution.md
casio-info/: CASIO-GRAPHING-UX-REPORT.md
desktop/: CMakeLists.txt
docs/: documentation.docx
esp32/: CMakeLists.txt  README.md  esp32_build.bat  onefilemain.c  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  MCP23017_BUTTON_CONFIG.md  TEMP_BLUE_FLASH_CHANGES.md  button_config.c  button_config.h  button_driver.c  button_driver.h  button_keymap.txt  driver.c  driver.h  idf_component.yml  input_hal.c  main.c  mcp23017_button_driver.c  mcp23017_button_driver.h  mcp23017_keymap.c  mcp23017_keymap.h  ui_hal.h
pseudocodes/: circular_buffer.r  coordinate_transform.r  eval.r  implicit_multiplication.r  newton_raphson.r  quadratic_solver.r  suvat_solver.r
src/: button_keymap.c  button_keymap.h  calc_math.c  calc_math.h  expr_eval.c  expr_eval.h  font_math_12.c  font_math_14.c  graph.c  graph.h  input_hal.h  main_menu.c  main_menu.h  math.c  math.h  mechanics.c  mechanics.h  numerical_methods.c  numerical_methods.h  solver.c  (+9 more)
(+2508 files in other folders)
